[jacquesIdea][usermanager] Fix (once more) Pour overflow titre modal de suppression + Affichage d'une vue de l'ancienne image de profil

--- a/jacquesIdea/static/jacquesIdea/css/jacquesIdea.css
+++ b/jacquesIdea/static/jacquesIdea/css/jacquesIdea.css
@@ -3,13 +3,15 @@
     text-align: justify;
 }
 
-.box-header > .box-tools {
+.box-header > .box-tools
+{
     right: 10px;
     top: 5px;
     position: initial;
 }
 
-.box-header .box-title{
+.box-header .box-title
+{
     display : block;
     -ms-word-wrap: break-word;
     word-wrap: break-word;
@@ -28,4 +30,9 @@
 .vote-down.voted
 {
     background-color: #dd4b39 !important;
+}
+
+.modal-content
+{
+    word-wrap : break-word;
 }
